Update README; add full docs and plot tool
Condense README into a concise professional overview with quick-run instructions, evaluation metrics, and a per-strategy summary table (includes a PowerShell backtest command). Restore the previous verbose README as docs/README_FULL.md for reference. Add docs/generate_loss_plot.py to parse training logs and emit docs/advml_loss.csv and docs/advml_loss.png. Include logs/all_backtests_summary.csv with the latest backtest summaries.