@@ -1,1046 +1,136 @@
-# HFT Trading System
+# HFT Trading System — Professional Overview
 
-A professional-grade high-frequency trading system built in Java with real-time market data integration, advanced order book management, multiple sophisticated trading strategies, comprehensive risk management, and enterprise-grade monitoring capabilities.
+This repository implements a high-frequency trading (HFT) research framework in Java. It includes: low-latency cores, multiple trading strategies, an offline backtesting engine, basic ML components, and risk controls. The README below focuses on how to reproduce results, the evaluation metrics (with concise math), and the latest per-strategy test results.
 
-## Core Features
+## Quick Links
+- Build: `mvn clean package`
+- Run all backtests (recommended; uses shaded JAR):
 
-### Real-Time Market Data Integration
-- Multi-Exchange Support: Connect to Binance, Coinbase, and other major exchanges
-- WebSocket Streaming: Real-time tick data with sub-millisecond latency
-- Smart Data Routing: Automatic failover and load balancing across exchanges
-- Data Normalization: Unified format for market data from different exchanges
-
-### Advanced Order Book Management
-- O(log n) Price Levels: TreeMap-based implementation for ultra-fast lookups
-- Multiple Order Types: Limit, Market, IOC (Immediate or Cancel), FOK (Fill or Kill)
-- Price-Time Priority: Fair and deterministic order matching
-- High-Throughput Processing: Handles 50,000+ ticks per second
-
-### Sophisticated Trading Strategies
-- Market Making: Provide liquidity and capture bid-ask spreads
-- Momentum Trading: Detect and follow price trends with statistical analysis
-- Statistical Arbitrage: Exploit mean reversion and cointegration opportunities
-- Triangular Arbitrage: Identify and execute cross-currency arbitrage opportunities
-
-### Professional Risk Management
-- Position Limits: Enforce maximum position sizes per symbol
-- Drawdown Control: Automatic trading halt on maximum drawdown
-- Stop-Loss Protection: Individual position and portfolio-level stop losses
-- Rate Limiting: Prevent excessive order submission
-- Emergency Stop: Instant trading halt on critical risk breaches
-
-### Enterprise-Grade Monitoring
-- Real-Time Performance Metrics: Latency, throughput, memory usage
-- Percentile Tracking: P50, P95, P99 latency measurements
-- Custom Metrics: Track business-specific KPIs
-- Automated Reporting: Scheduled performance reports
-
-### Multi-Exchange Architecture
-- Smart Order Routing: Route orders to optimal exchanges
-- Failover Protection: Automatic switching on exchange failures
-- Consolidated Account Info: Unified view across all exchanges
-- Health Monitoring: Real-time exchange status tracking
-
-### Ultra-High Performance Design
-- **Binary Encoding**: 33-49 byte messages (10x smaller than JSON)
-- **LMAX Disruptor**: 25M+ messages/sec capability (100x faster)
-- **Aeron Messaging**: <100μs cloud, 18μs physical hardware latency (1000x lower)
-- **FIX Protocol**: Industry-standard external API integration
-- **Primitive Types**: All prices stored as long (price * 10000) for speed
-- **Lock-Free Data Structures**: AtomicLong, ConcurrentHashMap for thread safety
-- **Object Pooling**: Reusable objects to minimize GC pressure
-- **Zero-Copy Support**: Foundation for binary protocols
-
-### Comprehensive Backtesting
-- Historical Data Testing: Test strategies on extensive historical datasets
-- Performance Metrics: Sharpe ratio, maximum drawdown, win rate
-- Scenario Analysis: Test under various market conditions
-- Optimization Tools: Parameter tuning and strategy comparison  
-
-## Project Structure
-
-```
-hft-trading-system/
-├── src/main/java/com/hft/
-│   ├── core/               # Core data models (Tick, Order, Trade, etc.)
-│   │   ├── binary/         # Binary encoding protocol (NEW)
-│   │   ├── disruptor/      # LMAX Disruptor engine (NEW)
-│   │   ├── aeron/          # Aeron messaging system (NEW)
-│   │   ├── fix/            # FIX protocol handler (NEW)
-│   │   └── integration/    # Ultra-high performance engine (NEW)
-│   ├── orderbook/          # Order book implementation
-│   ├── exchange/           # Exchange connectors (Binance WebSocket)
-│   ├── strategy/           # Trading strategies
-│   ├── backtest/           # Backtesting engine
-│   └── utils/              # Utilities (data generation, etc.)
-├── data/                   # Market data files
-├── SETUP_JAVA11.md         # Java 11 installation guide (NEW)
-├── run_with_java21.bat     # Java 21+ workaround script (NEW)
-└── pom.xml                 # Maven configuration
+```powershell
+& java -D"advml.lstm.epochs=200" -D"advml.rl.episodes=500" -D"advml.train.datafile=data\binance_BTCUSDT_1m_30d.csv" -cp "target\hft-trading-system-1.0-SNAPSHOT-shaded.jar;target\classes" com.hft.backtest.RunAllBacktests > logs\all_backtests_run_with_fetch.log 2>&1
 ```
 
-## Prerequisites
+- Backtest summary CSV: [logs/all_backtests_summary.csv](logs/all_backtests_summary.csv#L1-L6)
 
-- Java 11 or higher
-- Maven 3.6+
-- Internet connection (for live trading with Binance)
+## Reproducing the Backtests (minimal steps)
+1. Build: `mvn clean package`
+2. (Optional) Fetch Binance historical klines into `data/binance_BTCUSDT_1m_30d.csv` using the provided `RunDataFetcher` utility.
+3. Run the backtest command above. Ensure the shaded JAR is on the classpath to avoid missing logging dependencies.
+4. Results are written to `logs/all_backtests_summary.csv` and detailed log `logs/all_backtests_run_with_fetch.log`.
 
-## Quick Start
+## Per-strategy Test Results (latest run)
+Summary file: [logs/all_backtests_summary.csv](logs/all_backtests_summary.csv#L1-L6)
 
-### 1. Build the Project
-
-```bash
-cd hft-trading-system
-mvn clean package
-```
-
-### 2. Run Live Trading (Educational Simulation)
-
-Connect to Binance for educational market data simulation:
-
-```bash
-mvn exec:java -Dexec.mainClass="com.hft.Main"
-```
-
-**⚠️ EDUCATIONAL USE ONLY**: This system processes real market data but does NOT place actual trades.
-
-**Choose your strategy:**
-- **1**: Market Making (provides liquidity, captures spread)
-- **2**: Momentum (follows price trends)
-
-Press ENTER to stop trading and see final statistics.
-
-### 3. Run Backtesting
-
-Test strategies on historical data:
-
-```bash
-mvn exec:java -Dexec.mainClass="com.hft.backtest.BacktestRunner"
-```
-
-First run will generate 100,000 sample ticks (~50 MB).
-
-### 4. Ultra-High Performance Trading (NEW!)
-
-Run the new ultra-high performance system with Binary Encoding + LMAX Disruptor + Aeron + FIX Protocol:
-
-```bash
-# For Java 11 (Recommended)
-java -jar target/hft-trading-system-1.0-SNAPSHOT.jar
-
-# For Java 17+ (with module flags)
-java --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED -jar target/hft-trading-system-1.0-SNAPSHOT.jar
-
-# Or use the provided script
-run_with_java21.bat
-```
-
-**🚀 Ultra-High Performance Features:**
-- **Binary Encoding**: 33-49 byte messages (10x smaller than JSON)
-- **LMAX Disruptor**: 25M+ messages/sec capability (100x faster)
-- **Aeron Messaging**: <100μs cloud, 18μs physical hardware latency (1000x lower)
-- **FIX Protocol**: Industry-standard external API integration
-- **Real-time Market Data**: Binance WebSocket integration
-- **All Strategies**: Market Making, Momentum, Statistical Arbitrage, Triangular Arbitrage
-
-## Strategies Explained
-
-### Market Making Strategy
-- Places buy and sell orders around mid-price
-- Captures the bid-ask spread
-- Manages inventory position limits
-- Best for: Low volatility, high volume markets
-
-**Parameters:**
-- `spreadPercent`: Distance from mid-price (e.g., 0.02 = 0.02%)
-- `orderSize`: Quantity per order
-- `maxPosition`: Maximum inventory position
-
-### Momentum Strategy
-- Detects price trends using recent price history
-- Buys on upward momentum, sells on downward
-- Rate-limited to prevent overtrading
-- Best for: Trending markets
-
-**Parameters:**
-- `lookbackPeriod`: Number of ticks to analyze (e.g., 20)
-- `threshold`: Price change % to trigger trade (e.g., 0.05%)
-- `orderSize`: Quantity per trade
-- `maxPosition`: Maximum position size
-
-## Architecture Highlights
-
-### Order Book (`OrderBook.java`)
-- **TreeMap-based price levels** for O(log n) operations
-- **Fast order lookup** via HashMap for O(1) order retrieval
-- **Multiple order types**: Limit, Market, IOC (Immediate or Cancel), FOK (Fill or Kill)
-- **Trade matching**: Price-time priority with fair execution
-- **High-performance**: Handles 50,000+ ticks/second
-
-### Trading Engine (`TradingEngine.java`)
-- **Single-threaded processing** for deterministic behavior
-- **Statistics tracking**: Ticks/second, trades executed, P&L
-- **Strategy coordination**: Feeds ticks to strategy, executes orders
-- **Event-driven architecture**: Reactive to market data
-
-### Binance Connector (`BinanceConnector.java`)
-- **WebSocket streaming** for real-time data
-- **Non-blocking queue** for tick buffering
-- **Multiple symbol support**
-- **JSON parsing** with Gson
-
-## Performance Considerations
-
-This system uses several HFT optimization techniques:
-
-1. **Primitive Types**: All prices stored as `long` (price * 10000) to avoid floating-point
-2. **Pre-allocation**: Order books and data structures created upfront
-3. **Lock-Free**: AtomicLong for counters, minimal synchronization
-4. **Zero-Copy**: Direct ByteBuffer support (foundation for binary protocols)
-5. **Object Pooling**: Reusable Tick objects (ready for extension)
-
-## Sample Output
-
-### Live Trading
-```
-=== Trading Engine Statistics ===
-Uptime: 30s
-Ticks processed: 1247 (41.57 tps)
-Trades executed: 23
-Strategy P&L: $12.34
-Queue size: 0
-================================
-```
-
-### Backtesting
-```
-╔════════════════════════════════════════════╗
-║         BACKTEST RESULTS                   ║
-╚════════════════════════════════════════════╝
-
-Strategy:           MarketMaking
-Duration:           2341 ms (2.34 seconds)
-────────────────────────────────────────────
-Ticks Processed:    100,000
-Trades Executed:    1,245
-Ticks per Second:   42,717.64
-────────────────────────────────────────────
-Total P&L:          $245.67
-Max Drawdown:       $23.45
-Sharpe Ratio:       1.234
-────────────────────────────────────────────
-```
-
-#### System Performance
-- **Processing Speed**: 144,717 - 284,090 ticks per second
-- **Latency**: Average 0.125ms, P95: 0.180ms, P99: 0.250ms
-- **Memory Usage**: ~25% of allocated heap
-- **Thread Count**: 13 active threads
-- **Throughput**: 148 operations per second sustained
-
-#### Trading Performance
-- **Order Processing**: 0 orders generated (test data without liquidity)
-- **Trade Execution**: 0 trades executed
-- **P&L**: $0.00 (no trades in test environment)
-- **Risk Management**: All risk checks passing
-- **Position Tracking**: Working correctly
-#### Exchange Connectivity
-- **Binance API**: Initialized (401 error due to invalid test credentials)
-- **Coinbase API**: Initialized (500 error due to test environment)
-- **Multi-Exchange Manager**: Smart routing and failover configured
-- **Health Monitoring**: Exchange status tracking
-
-## 📚 Trading Strategies - Mathematical Concepts & Examples
-
-### 🎯 1. Market Making Strategy
-
-#### **Concept**
-Market Making provides liquidity by placing simultaneous buy and sell orders around the current mid-price, profiting from the bid-ask spread.
-
-#### **Mathematical Foundation**
-
-**Mid-Price Calculation:**
-```
-MidPrice = (BestBid + BestAsk) / 2
-```
-
-**Quote Prices:**
-```
-BidPrice = MidPrice - (Spread / 2)
-AskPrice = MidPrice + (Spread / 2)
-```
-
-**Profit per Trade:**
-```
-Profit = (AskPrice - BidPrice) × OrderSize
-       = Spread × OrderSize
-```
-
-#### **Implementation Example**
-```java
-// Current market: Best Bid = $49,990, Best Ask = $50,010
-MidPrice = (49,990 + 50,010) / 2 = $50,000
-
-// With 0.02% spread (10 ticks)
-SpreadTicks = 0.02% × 10,000 = 200 ticks = $0.02
-BidPrice = 50,000 - 100 = $49,900
-AskPrice = 50,000 + 100 = $50,100
-
-// Profit when both orders fill
-Profit = ($50,100 - $49,900) × 1 BTC = $200
-```
-
-#### **Key Parameters**
-- **Spread**: 0.02% (2 basis points) - distance from mid-price
-- **Order Size**: 1 BTC - quantity per order
-- **Max Position**: 5 BTC - maximum inventory exposure
-- **Quote Interval**: 100ms - minimum time between quote updates
-
-#### **Risk Management**
-```java
-// Position limits prevent inventory buildup
-if (currentPosition < maxPosition) placeBuyOrder();
-if (currentPosition > -maxPosition) placeSellOrder();
-```
-
----
-
-## Backtest Run Results (automated)
-
-These results were produced by running `com.hft.backtest.BacktestRunner` against `data/sample_market_data.csv` (generated 100,000 ticks) on the current machine.
-
-- **Market Making**
-    - Duration: 457 ms
-    - Ticks Processed: 100,000
-    - Trades Executed: 0
-    - Ticks/sec: 218,818.38
-    - Total P&L: $0.00
-
-- **Momentum**
-    - Duration: 337 ms
-    - Ticks Processed: 100,000
-    - Trades Executed: 0
-    - Ticks/sec: 296,735.91
-    - Total P&L: $0.00
+| Strategy | Duration (ms) | Ticks | Trades | Total P&L | Ticks/sec |
+|---|---:|---:|---:|---:|---:|
+| MarketMaking | 259 | 100000 | 0 | 0.00 | 386100.39 |
+| Momentum | 151 | 100000 | 0 | 0.00 | 662251.66 |
+| TriangularArbitrage | 131 | 100000 | 0 | 0.00 | 763358.78 |
+| StatisticalArbitrage | 158 | 100000 | 0 | 0.00 | 632911.39 |
+| AIEnhanced | 95 | 100000 | 0 | 0.00 | 1052631.58 |
+| AdvancedML | 1408 | 100000 | 0 | 0.00 | 71022.73 |
 
 Notes:
-- The backtests use the synthetic `data/sample_market_data.csv` generator and are deterministic for this dataset.
-- In this environment Aeron was unavailable (runtime fallback), but the backtesting engine runs offline and is unaffected by Aeron availability.
+- The `AdvancedML` run used a small synthetic bootstrap (200 samples) because `data/binance_BTCUSDT_1m_30d.csv` was not present when the run started. To validate ML-driven behavior, fetch the real CSV and re-run training-backed backtests.
 
+## Evaluation Metrics (definitions & examples)
+All metrics below are reproducible from backtest traces and P&L time series.
 
-### 🚀 2. Momentum Strategy
+- Ticks per second (throughput):
+  $${\mathrm{ticks/sec}}=\dfrac{\mathrm{ticks\ processed}}{\mathrm{duration\ (s)}}$$
 
-#### **Concept**
-Momentum trading follows price trends - buying when prices are rising and selling when falling, based on the principle that trends tend to persist.
+- Cumulative P&L: sum of executed-trade profit/loss over the run.
 
-#### **Mathematical Foundation**
+- Sharpe Ratio (annualized, simplifying to sample returns):
+  $$\mathrm{Sharpe} = \dfrac{\bar{r}-r_f}{\sigma_r},$$
+  where $\bar{r}$ is mean periodic return, $r_f$ is the risk-free rate, and $\sigma_r$ is return standard deviation.
 
-**Price Change Calculation:**
+- Maximum Drawdown (fraction):
+  $$\mathrm{MaxDrawdown}=\max_{t}\left(\dfrac{\mathrm{peak\ equity\ before\ }t - \mathrm{min\ equity\ after\ peak}}{\mathrm{peak\ equity\ before\ }t}\right).$$
+
+Example (ticks/sec using AdvancedML row):
+$$\mathrm{ticks/sec}=\dfrac{100000}{1408/1000}=71022.73\ \text{ticks/sec}$$
+
+Example (Sharpe — conceptual): compute per-tick returns from P&L series, take mean and stddev, then apply the formula above. (This repository exports P&L traces in logs when enabled.)
+
+## How to Interpret Results
+- Trades = 0 in these synthetic test runs means the sample dataset or strategy parameters did not produce fills; this is expected for synthetic or low-liquidity datasets.
+- Throughput numbers reflect single-machine offline backtesting performance, not live exchange latency.
+- For ML strategies, check that models are trained from the intended dataset. If a training file is not found, the system falls back to a synthetic bootstrap (not suitable for production evaluation).
+
+## Reproducible Example: Train AdvancedML on fetched data
+1. Fetch data (example CLI):
+```powershell
+& java -cp "target\hft-trading-system-1.0-SNAPSHOT-shaded.jar;target\classes" com.hft.utils.RunDataFetcher
 ```
-PriceChange = ((CurrentPrice - OldestPrice) / OldestPrice) × 100%
-```
-
-**Momentum Signal:**
-```
-Signal = {
-    BUY  if PriceChange > +Threshold
-    SELL if PriceChange < -Threshold
-    HOLD otherwise
-}
-```
-
-**Rate Limiting:**
-```
-TimeSinceLastTrade = CurrentTime - LastTradeTime
-if (TimeSinceLastTrade < MinInterval) return HOLD
-```
-
-#### **Implementation Example**
-```java
-// Price history over 20 ticks
-Prices = [49,800, 49,850, 49,900, 50,000, 50,100, 50,200]
-
-// Calculate momentum
-OldPrice = 49,800 (20 ticks ago)
-NewPrice = 50,200 (current)
-PriceChange = ((50,200 - 49,800) / 49,800) × 100% = 0.80%
-
-// With 0.05% threshold
-if (0.80% > 0.05%) → BUY signal
+2. Verify `data/binance_BTCUSDT_1m_30d.csv` exists.
+3. Run backtests (quotes the `-D` flags in PowerShell):
+```powershell
+& java -D"advml.lstm.epochs=200" -D"advml.rl.episodes=500" -D"advml.train.datafile=data\binance_BTCUSDT_1m_30d.csv" -cp "target\hft-trading-system-1.0-SNAPSHOT-shaded.jar;target\classes" com.hft.backtest.RunAllBacktests > logs\all_backtests_run_with_fetch.log 2>&1
 ```
 
-#### **Key Parameters**
-- **Lookback Period**: 20 ticks - historical window for momentum calculation
-- **Threshold**: 0.05% - minimum price change to trigger trade
-- **Order Size**: 1 BTC - quantity per trade
-- **Max Position**: 10 BTC - maximum position size
-- **Min Trade Interval**: 1 second - prevents overtrading
+## Troubleshooting & Notes
+- PowerShell argument parsing: quote `-D` system properties as shown above.
+- Always include the shaded JAR on the classpath to avoid missing SLF4J or other runtime deps.
+- If ML results look unstable, increase `advml.lstm.epochs` and provide a larger training dataset.
 
-#### **Risk Management**
-```java
-// Position limits and rate limiting
-if (priceChange > threshold && currentPosition < maxPosition) {
-    placeBuyOrder();
-    lastTradeTime = System.nanoTime();
-}
+## Contributing & Next Steps
+- Tests live in `src/test/java` and CI should run `mvn test` and `mvn -DskipTests=false package` before merging.
+- Suggested immediate improvements:
+  1. Add end-to-end deterministic fixtures for ML training to avoid synthetic bootstrap in CI.
+  2. Persist per-tick P&L traces to `logs/traces/` for reproducible Sharpe/drawdown calculation.
+
+## License & Disclaimer
+MIT License. This software is for research and educational use only. Do not use with real funds without professional risk management and exhaustive testing.
+
+## Loss Plot (AdvancedML)
+
+You can generate a CSV and PNG of reported batch losses (parsed from `logs/all_backtests_run_with_fetch.log`) with the included script:
+
+```powershell
+python docs/generate_loss_plot.py
 ```
 
----
+Outputs:
+- `docs/advml_loss.csv` — indexed CSV of reported losses
+- `docs/advml_loss.png` — simple line plot of loss vs batch index
+
+If you want the fully-detailed original README (mathematical derivations, exhaustive examples, and the prior verbose documentation), see `docs/README_FULL.md`.
+
+## AdvancedML Training Report (latest run)
+
+Parsed training summary (from `logs/all_backtests_run_with_fetch.log`):
+
+- Reported batch summaries: 21
+- Avg Loss statistics (reported values): mean = 0.0737, min = 0.0532, max = 0.1723, stddev ≈ 0.0254
+- Context: The run logged multiple "Training Epoch 0" batch summaries. The configured training file was missing, so a synthetic bootstrap dataset was used; results reflect that bootstrap.
+
+ASCII loss sparkline (index: bar, value):
+
+1: ████ 0.064279
+2: ████ 0.065003
+3: ██████ 0.072063
+4: ██ 0.058029
+5: ███ 0.062501
+6: ███ 0.062970
+7: ██ 0.059640
+8: ██ 0.059267
+9: ███████ 0.073166
+10: ██████ 0.070726
+11: ██████████ 0.082860
+12: ████ 0.063703
+13: ████ 0.064533
+14: ███████ 0.073921
+15: █████ 0.067002
+16: ██████████████ 0.104437
+17:  0.053211
+18: █████████████ 0.098848
+19: █ 0.054368
+20: ████ 0.065455
+21: █████████████████████████████████████████ 0.172260
+
+Recommendations:
+- Provide a proper training dataset at `data/binance_BTCUSDT_1m_30d.csv` and re-run with increased epochs (example: `advml.lstm.epochs=1000`).
+- Persist per-epoch losses to `logs/training/advml_loss.csv` for plot generation and CI validation.
+- Normalize features and save scalers under `models/` so production inference uses the same preprocessing.
 
-### 📊 3. Statistical Arbitrage Strategy
-
-#### **Concept**
-Statistical arbitrage exploits mean reversion and cointegration relationships between multiple assets, trading temporary price divergences that historically revert to the mean.
-
-#### **Mathematical Foundation**
-
-**Linear Regression for Hedge Ratios:**
-```
-Y = β₀ + β₁X₁ + β₂X₂ + ... + ε
-```
-Where Y is the base asset, X₁, X₂ are hedge assets, β are hedge ratios.
-
-**Spread Calculation:**
-```
-Spread = Y - (β₁X₁ + β₂X₂ + ...)
-```
-
-**Z-Score for Signal Generation:**
-```
-ZScore = (CurrentSpread - MeanSpread) / StandardDeviation
-```
-
-**Trading Signal:**
-```
-Signal = {
-    LONG_SPREAD  if ZScore < -Threshold
-    SHORT_SPREAD if ZScore > +Threshold
-}
-```
-
-#### **Implementation Example**
-```java
-// BTC/ETH pair trading
-// Regression result: ETH = 0.05 × BTC + 1000
-HedgeRatio = 0.05
-
-// Current prices: BTC = $50,000, ETH = $3,500
-ExpectedETH = 0.05 × 50,000 + 1000 = $3,500
-ActualETH = $3,450
-Spread = $3,500 - $3,450 = $50
-
-// Historical spread statistics
-MeanSpread = $0
-StdDevSpread = $25
-
-// Calculate Z-score
-ZScore = ($50 - $0) / $25 = 2.0
-
-// With threshold of 2.0
-if (ZScore > 2.0) → SHORT_SPREAD signal
-// Strategy: Sell ETH, Buy BTC (hedge ratio)
-```
-
-#### **Hedge Ratio Calculation**
-```java
-// Using Ordinary Least Squares (OLS)
-double[][] x = new double[lookbackPeriod][symbols.length - 1];
-double[] y = new double[lookbackPeriod];
-
-// Fill with historical prices
-OLSMultipleLinearRegression regression = new OLSMultipleLinearRegression();
-regression.newSampleData(y, x);
-hedgeRatios = regression.estimateRegressionParameters();
-```
-
-#### **Key Parameters**
-- **Symbols**: [BTC/USDT, ETH/USDT] - trading pair
-- **Lookback Period**: 1000 ticks - historical data window
-- **Z-Score Threshold**: 2.0 - statistical significance level
-- **Min Spread**: 0.1% - minimum profit requirement
-- **Order Size**: 1 unit - base order quantity
-
-#### **Risk Management**
-```java
-// Position sizing based on hedge ratios
-int hedgeSize = (int)(orderSize * hedgeRatios[i]);
-
-// Only one active position at a time
-if (activePosition != null && !activePosition.isComplete()) {
-    return; // Wait for current position to complete
-}
-```
-
----
-
-### 🔺 4. Triangular Arbitrage Strategy
-
-#### **Concept**
-Triangular arbitrage exploits price inefficiencies across three currency pairs, executing simultaneous trades to profit from mispricings in the triangular relationship.
-
-#### **Mathematical Foundation**
-
-**Implied Cross Rate:**
-```
-ImpliedCrossRate = QuotePairPrice / BasePairPrice
-```
-
-**Arbitrage Profit Calculation:**
-```
-// Direction 1: USDT → BTC → ETH → USDT
-Profit1 = ((OrderSize / BasePrice) / CrossPrice) × QuotePrice - OrderSize
-
-// Direction 2: USDT → ETH → BTC → USDT  
-Profit2 = ((OrderSize / QuotePrice) × CrossPrice) × BasePrice - OrderSize
-```
-
-**Profit Percentage:**
-```
-ProfitPercent = Profit / OrderSize × 100%
-```
-
-#### **Implementation Example**
-```java
-// Current market prices:
-// BTC/USDT = $50,000
-// ETH/USDT = $3,500
-// ETH/BTC = 0.07
-
-// Calculate implied cross rate
-ImpliedETH_BTC = $3,500 / $50,000 = 0.07
-
-// Check for arbitrage opportunities
-// Direction 1: USDT → BTC → ETH → USDT
-StartAmount = $10,000
-BTC = $10,000 / $50,000 = 0.2 BTC
-ETH = 0.2 / 0.07 = 2.857 ETH
-FinalUSDT = 2.857 × $3,500 = $10,000
-Profit1 = $10,000 - $10,000 = $0
-
-// If ETH/BTC is mispriced at 0.069:
-ETH = 0.2 / 0.069 = 2.899 ETH
-FinalUSDT = 2.899 × $3,500 = $10,147
-Profit = $147 (1.47% arbitrage)
-```
-
-#### **Order Execution Logic**
-```java
-// Direction 1: Buy BTC → Sell BTC for ETH → Sell ETH for USDT
-Order1: Buy BTC with USDT (market order)
-Order2: Sell BTC for ETH (market order) 
-Order3: Sell ETH for USDT (market order)
-
-// Calculate quantities:
-BTC_Amount = OrderSize / BTC_USDT_Price
-ETH_Amount = BTC_Amount / ETH_BTC_Price
-USDT_Final = ETH_Amount * ETH_USDT_Price
-```
-
-#### **Key Parameters**
-- **Base Pair**: BTC/USDT - primary trading pair
-- **Quote Pair**: ETH/USDT - secondary trading pair  
-- **Cross Pair**: ETH/BTC - cross-currency pair
-- **Min Profit Threshold**: 0.1% - minimum arbitrage profit
-- **Order Size**: $10,000 USDT - base trading amount
-- **Max Slippage**: 0.2% - maximum acceptable price impact
-
-#### **Risk Management**
-```java
-// Check data freshness
-long now = System.currentTimeMillis();
-if ((now - lastUpdateTime[pair]) > staleThreshold) {
-    return; // Wait for fresh data
-}
-
-// Only one arbitrage position at a time
-if (activePosition != null && !activePosition.isComplete()) {
-    return; // Wait for completion
-}
-```
-
----
-
-### 📈 Strategy Performance Comparison
-
-| Strategy | Type | Profit Source | Risk Level | Required Data | Execution Speed |
-|----------|------|---------------|-----------|--------------|----------------|
-| **Market Making** | Market Neutral | Bid-Ask Spread | Low | Order Book | Ultra-Fast |
-| **Momentum** | Directional | Price Trends | Medium | Price History | Fast |
-| **Statistical Arbitrage** | Market Neutral | Mean Reversion | Medium | Multiple Assets | Medium |
-| **Triangular Arbitrage** | Market Neutral | Price Inefficiency | High | Three Pairs | Fast |
-
-### 🎯 Strategy Selection Guide
-
-#### **Market Making** - Best for:
-- High-volume, low-volatility markets
-- When you have inventory advantages
-- Stable market conditions
-- **Example**: BTC/USDT during normal trading hours
-
-#### **Momentum** - Best for:
-- Trending markets with clear direction
-- High volatility environments
-- When you can tolerate directional risk
-- **Example**: Crypto bull/bear markets
-
-#### **Statistical Arbitrage** - Best for:
-- Markets with cointegrated assets
-- Mean-reverting price relationships
-- When you have sophisticated statistical models
-- **Example**: BTC/ETH pair trading
-
-#### **Triangular Arbitrage** - Best for:
-- Markets with multiple trading pairs
-- High-frequency price inefficiencies
-- When you have ultra-low latency
-- **Example**: Cross-currency arbitrage opportunities
-
-### 🔬 Advanced Mathematical Concepts
-
-#### **Kelly Criterion for Position Sizing**
-```
-PositionSize = (WinRate × WinProfit - LossRate × LossRisk) / WinProfit
-```
-
-#### **Sharpe Ratio for Performance**
-```
-SharpeRatio = (AnnualReturn - RiskFreeRate) / AnnualVolatility
-```
-
-#### **Maximum Drawdown**
-```
-MaxDrawdown = (PeakEquity - LowestEquity) / PeakEquity × 100%
-```
-
-#### **Value at Risk (VaR)**
-```
-VaR = PortfolioValue × ZScore × Volatility × √TimeHorizon
-```
-
-This institutional-grade risk management system ensures that your HFT trading operates with the same level of sophistication and protection as the world's leading trading firms, while maintaining the flexibility to adapt to different risk appetites and market conditions.
-
-| **Risk Manager** | ✅ PASS | Position limits, P&L tracking, risk checks |
-| **Exchange APIs** | ✅ PASS | APIs initialized (expected auth errors in test) |
-| **Multi-Exchange Manager** | ✅ PASS | Smart routing, health checks, 2 exchanges configured |
-
-**Overall Success Rate: 100% (7/7 components passed)**
-
-### 🔧 Build & Compilation
-
-**Build Command:** `mvn clean package`
-**Build Status:** ✅ SUCCESS
-**Compilation Warnings:** 1 (unchecked operations in CoinbaseRealApi)
-**Shaded JAR:** `hft-trading-system-1.0-SNAPSHOT.jar` (includes all dependencies)
-**Dependencies Included:** WebSocket, JSON processing, logging, Apache Commons Math
-
-### 📝 Key Observations
-
-1. **High Performance**: System processes 140K+ ticks/second with sub-millisecond latency
-2. **Robust Architecture**: All components pass comprehensive tests
-3. **Risk Management**: Position limits and drawdown controls working correctly
-4. **Exchange Integration**: APIs properly initialize (auth errors expected without real API keys)
-5. **Strategy Framework**: All trading strategies ready for live market data
-6. **Monitoring**: Real-time performance tracking and health monitoring functional
-CSV format for backtesting:
-```
-timestamp,symbolId,price,volume,side
-1707043200000000000,1,500000000,100000,0
-```
-
-- `timestamp`: Nanoseconds since epoch
-- `symbolId`: Integer symbol ID (from SymbolMapper)
-- `price`: Price * 10000 (4 decimal places)
-- `volume`: Volume amount
-- `side`: 0 = Buy, 1 = Sell
-
-## Troubleshooting
-
-**Connection Failed**: 
-- Check internet connection
-- Verify Binance API is accessible
-- Check firewall settings
-
-**OutOfMemoryError**:
-- Increase JVM heap: `mvn exec:java -Dexec.args="-Xmx2g"`
-
-**No Trades Executing**:
-- Check strategy parameters (spread, threshold)
-- Verify order book has liquidity
-- Check position limits
-
-## License
-
-MIT License - Feel free to modify and use for learning/trading.
-
-## Disclaimer
-
-⚠️ **This is for educational purposes only.**  
-⚠️ **Do not use for real trading without thorough testing.**  
-⚠️ **Cryptocurrency trading carries significant risk.**
-
-## System Status & Achievements
-
-### ✅ **COMPLETED FEATURES:**
-- ✅ Risk management (stop-loss, position limits) - **IMPLEMENTED**
-- ✅ Multiple strategies (arbitrage, statistical) - **IMPLEMENTED**
-- ✅ Order execution simulation - **IMPLEMENTED**
-- ✅ Real exchange API integration - **IMPLEMENTED**
-- ✅ Performance profiling - **IMPLEMENTED**
-- ✅ Multi-threaded processing for high throughput - **IMPLEMENTED**
-- ✅ FIX protocol support - **COMPLETED**
-
-### 🚀 **FUTURE ENHANCEMENTS:**
-- [ ] Machine learning strategies
-- [ ] Advanced order types (iceberg, TWAP)
-- [ ] Multi-asset portfolio optimization
-
-## Resources
-
-- [Binance WebSocket API](https://binance-docs.github.io/apidocs/spot/en/#websocket-market-streams)
-- [HFT Best Practices](https://www.quantstart.com/articles/)
-- [Order Book Algorithms](https://web.archive.org/web/20110219163448/http://howtohft.wordpress.com/2011/02/15/how-to-build-a-fast-limit-order-book/)
-- [Verification Report](MARKET_FOUR_STRATEGY_VERIFICATION_REPORT.md) - Complete test results
-
-## 📈 **COMPREHENSIVE PERFORMANCE COMPARISON**
-
-| Strategy | Ticks Processed | Orders Generated | Orders Rejected | P&L | Performance |
-|-----------|----------------|------------------|-----------------|-----|-------------|
-| **Market Making** | 2,299 (144 tps) | 0 | 0 | $0.00 | Stable, no trades |
-| **Momentum** | 1,847 (103 tps) | 3 | 3 | $0.00 | Trend detection active |
-| **Statistical Arbitrage** | 4,575 (176 tps) | 5 | 5 | $0.00 | Highest processing |
-| **Triangular Arbitrage** | 3,142 (143 tps) | 2 | 2 | $0.00 | Cross-currency monitoring |
-
----
-
-## 🎯 **KEY OBSERVATIONS & ANALYSIS**
-
-### **✅ All Strategies Working Correctly:**
-- **Real Data Processing**: All strategies successfully processed live Binance data
-- **Risk Management**: All orders properly rejected by risk controls (expected behavior)
-- **Performance**: Sub-millisecond latency across all strategies
-- **Memory Efficiency**: Consistent 25.3% memory usage
-- **Thread Management**: Stable 9-thread operation
-
-### **📊 Performance Metrics Summary:**
-- **Average Latency**: 0.125ms across all strategies
-- **P95 Latency**: 0.180ms (95th percentile)
-- **P99 Latency**: 0.250ms (99th percentile)
-- **Throughput**: 8-15 operations/second depending on strategy
-- **Tick Processing**: 64-176 ticks/second sustained
-
-### **🛡️ Risk Management Verification:**
-- **Position Limits**: All orders properly checked against limits
-- **Drawdown Control**: 10% maximum drawdown enforced
-- **Stop-Loss**: 5% stop-loss protection active
-- **Rate Limiting**: 50 orders/second limit enforced
-- **Daily Loss**: $50,000 daily loss limit active
-
-### **🚀 O(1) Optimization Results:**
-- **Market Making**: Already O(1) - optimal performance
-- **Momentum**: O(n) → O(1) - 20-50x faster with circular buffer
-- **Statistical Arbitrage**: O(n²) → O(1) - 100-1000x faster with incremental regression
-- **Triangular Arbitrage**: Already O(1) - fixed mathematical operations
-
----
-
-## 🏆 **PRODUCTION READINESS VERIFICATION**
-
-### **🎯 All Systems Operational:**
-- ✅ **Real Market Data**: Binance WebSocket connection active
-- ✅ **All Strategies Tested**: Market Making, Momentum, Statistical Arbitrage, Triangular Arbitrage
-- ✅ **O(1) Optimizations**: Implemented and verified
-- ✅ **Mathematical Formulas**: Documented with examples
-- ✅ **Performance Metrics**: Real-time monitoring active
-- ✅ **Risk Management**: Institutional-grade controls
-- ✅ **Professional Standards**: Meets HFT firm requirements
-
-### **📊 Performance Achievements:**
-- **Processing Speed**: 64-176 ticks per second sustained
-- **Order Generation**: Real-time strategy execution
-- **Latency**: Sub-millisecond order processing
-- **Memory Efficiency**: Optimized data structures
-- **Scalability**: Multi-threaded processing ready
-
-### **🚀 Ready for Educational Learning:**
-Your HFT system now implements the same O(1) optimization techniques used by the world's leading trading firms, with comprehensive mathematical documentation and real-world testing verification!
-
-**System Status**: 🟢 **EDUCATIONALLY READY**
-
-**⚠️ Next Steps**: Use paper trading accounts for educational learning only. Never deploy with real money without professional risk management and extensive testing.
-
----
-
-## 📈 **PERFORMANCE COMPARISON: OLD vs NEW**
-
-### **🔄 Before Ultra-High Performance Implementation:**
-- **Message Size**: 500+ bytes (JSON)
-- **Processing Speed**: 144,717 - 284,090 ticks/sec (theoretical)
-- **Latency**: 0.125ms average
-- **Protocol**: WebSocket only
-- **Architecture**: Traditional multi-threaded
-
-### **🚀 After Ultra-High Performance Implementation:**
-- **Message Size**: 33-49 bytes (Binary) - **10x smaller**
-- **Processing Speed**: 25M+ messages/sec capability - **100x faster**
-- **Latency**: <100μs (Aeron) - **1000x lower**
-- **Protocol**: Binary + FIX + WebSocket - **Industry standard**
-- **Architecture**: LMAX Disruptor + Aeron - **HFT-grade**
-
-### **📊 Real Market Data Test Results:**
-| Strategy | Ticks Processed | Rate (tps) | Orders Generated | Orders Rejected | Status |
-|----------|-----------------|------------|------------------|-----------------|---------|
-| **Market Making** | 2,299 | 144 | 0 | 0 | ✅ Stable |
-| **Momentum** | 1,847 | 103 | 3 | 3 | ✅ Risk controls working |
-| **Statistical Arbitrage** | 4,575 | 176 | 5 | 5 | ✅ Highest processing |
-| **Triangular Arbitrage** | 3,142 | 143 | 2 | 2 | ✅ Cross-currency active |
-
-### **🎯 Key Achievements:**
-- ✅ **All README Goals Met**: Processing speed, latency, memory usage targets achieved
-- ✅ **Better Results**: Real market data testing confirms performance claims
-- ✅ **Production Ready**: All systems tested and verified working
-- ✅ **HFT Standards**: Implements same technologies as top trading firms
-
----
-
-## 🧪 **COMPREHENSIVE TESTING RESULTS**
-
-### **All Strategy Tests with Real Data Simulation**
-
-This section documents the comprehensive testing of all trading strategies and system components using realistic market data simulation.
-
-#### **Test Execution Summary**
-- **Test Date**: March 17, 2026
-- **Test Environment**: Java 11, Windows 10, Maven 3.6+
-- **Test Duration**: ~5 minutes total
-- **Data Points**: 10,000+ simulated ticks per strategy
-- **Success Rate**: 100% (5/5 major test suites passed)
-
----
-
-### **📊 Individual Test Results**
-
-#### **1. SimpleStrategyTest - Basic Strategy Functionality**
-**Status**: ✅ **PASSED**
-
-| Strategy | Final P&L | Status | Key Observations |
-|----------|-----------|---------|------------------|
-| Market Making | $0.00 | WORKING | Proper spread management, order generation |
-| Momentum | $0.00 | WORKING | Trend detection, position management |
-| Statistical Arbitrage | $0.00 | WORKING | Multi-asset correlation analysis |
-| Triangular Arbitrage | $0.00 | WORKING | Arbitrage opportunity detection (5-8% profit opportunities identified) |
-
-**Performance Metrics**:
-- Ticks Processed: 1,000 per strategy
-- Processing Rate: ~1,000 ticks/second
-- Latency: Sub-millisecond
-- Memory Usage: <100MB
-
----
-
-#### **2. RealDataComprehensiveTest - Thorough Real Data Validation**
-**Status**: ✅ **PASSED**
-
-**Core Components Tested**:
-- ✅ Realistic market data generation and validation
-- ✅ MarketMakingStrategy: Real-time market making with realistic spreads
-- ✅ MomentumStrategy: Price momentum detection with real volatility
-- ✅ StatisticalArbitrage: Multi-asset arbitrage with real correlations
-- ✅ TriangularArbitrage: Cross-asset arbitrage with real FX rates
-- ✅ OptimizedOrderBook: High-performance order matching with real flow
-
-**Performance Metrics**:
-- Data Generation: 10,000+ realistic ticks/sec
-- Strategy Processing: 5,000+ ticks/sec per strategy
-- Order Book Operations: 1,000+ orders/sec
-- Real-time Processing: Sub-millisecond latency
-
-**Integration Validation**:
-- All components tested with realistic market conditions
-- Real-time data flow validation successful
-- Performance benchmarks met institutional standards
-- Error handling and edge cases covered
-- Scalability under high-frequency conditions verified
-
-**Production Readiness**: ✅ **READY FOR LIVE TRADING DEPLOYMENT**
-
----
-
-#### **3. Priority2AdvancedTest - ML and Advanced Features**
-**Status**: ✅ **PASSED**
-
-**Advanced Order Types**:
-- ✅ TWAP (Time-Weighted Average Price): 13% completion rate
-- ✅ VWAP (Volume-Weighted Average Price): 0% completion (test environment)
-- ✅ Iceberg: 95% completion rate (hidden order management)
-- ✅ ML-Optimized: 0% completion (requires ML model training)
-
-**ML Acceleration**:
-- ✅ FPGA interface: Detected and initialized
-- ✅ GPU interface: Detected and initialized
-- ✅ TensorRT optimizer: Functional
-- ✅ ML Processing: Framework ready (0 predictions in test)
-
-**Multi-Asset Portfolio Optimization**:
-- ✅ Assets Managed: 6 different assets
-- ✅ Portfolio Value: $1,000,000.00
-- ✅ P&L Tracking: -$0.00012 (minimal test variance)
-- ✅ Volatility Monitoring: Active
-
-**Pipeline Statistics**:
-- Advanced Orders: 4 total executed
-- Portfolio Optimization: 6 assets optimized
-- ML Processing: Framework operational
-- Acceleration: FPGA/GPU detected and ready
-
-**Overall Status**: ✅ **ALL ADVANCED FEATURES WORKING AT INSTITUTIONAL GRADE**
-
----
-
-#### **4. RealDataMLIntegrationTest - ML-Specific Testing**
-**Status**: ✅ **PASSED** (with timeout)
-
-**ML Pipeline Performance**:
-- ✅ Historical Data Collection: 24,369 samples processed
-- ✅ Feature Engineering: 24,271 features extracted
-- ✅ Model Training: 80 epochs completed
-- ✅ Training Accuracy: Average error 0.007585 (99.24% accuracy)
-- ✅ Model Persistence: 3 models saved successfully
-
-**ML Components Tested**:
-- HistoricalDataTrainer: ✅ Working
-- RealTimeMLProcessor: ✅ Working
-- MLModelPersistence: ✅ Working
-- MultiExchangeManager: ✅ Working
-
-**Note**: Test timed out after successful training completion - indicates robust processing capability.
-
----
-
-#### **5. ComprehensiveIntegrationTest - End-to-End System Testing**
-**Status**: ✅ **PASSED** (Fixed - No more infinite loops)
-
-**System Integration**:
-- ✅ Core Components: All operational
-- ✅ Exchange Connectors: Binance, Coinbase, Multi-exchange manager
-- ✅ ML Pipeline: Training, inference, persistence working
-- ✅ Trading Strategies: All 5 strategies functional
-- ✅ Execution Engine: Advanced order types operational
-- ✅ Risk Management: Position limits, P&L tracking active
-- ✅ Portfolio Optimization: Multi-asset optimization working
-- ✅ Performance Monitoring: Real-time metrics tracking (Fixed - no infinite loops)
-
-**Performance Monitoring Results**:
-- Uptime: Continuous monitoring active
-- Operations/sec: Real-time tracking
-- Avg Latency: Sub-millisecond
-- Memory Usage: Optimal
-- Thread Count: 22-24 threads (optimal for HFT)
-
-**Issues Fixed**:
-- ✅ Performance monitoring infinite loop resolved
-- ✅ Aeron/MediaDriver Java module access issues bypassed
-- ✅ Variable scope issues corrected
-- ✅ Clean shutdown implemented
-
----
-
-### **🎯 Unit Testing Results**
-
-#### **Component-Level Unit Tests**
-**Status**: ✅ **ALL UNIT TESTS PASSING**
-
-| Component | Tests | Pass Rate | Coverage |
-|-----------|-------|-----------|----------|
-| **Core Data Models** | 15/15 | 100% | Tick, Order, Trade, OrderBook |
-| **Trading Strategies** | 20/20 | 100% | All 5 strategies tested |
-| **Risk Management** | 12/12 | 100% | Position limits, P&L tracking |
-| **Exchange APIs** | 8/8 | 100% | Binance, Coinbase connectors |
-| **ML Components** | 18/18 | 100% | Training, inference, persistence |
-| **Performance Monitor** | 10/10 | 100% | Metrics collection, reporting |
-| **Portfolio Optimizer** | 7/7 | 100% | Multi-asset optimization |
-
-**Unit Test Metrics**:
-- **Total Tests**: 90 unit tests
-- **Pass Rate**: 100% (90/90)
-- **Code Coverage**: 95%+ across all modules
-- **Test Execution Time**: <30 seconds
-- **No Flaky Tests**: All tests consistently pass
-
----
-
-### **🎯 Overall Testing Summary**
-
-#### **Pass/Fail Status**
-| Test Suite | Status | Key Achievement |
-|------------|---------|------------------|
-| SimpleStrategyTest | ✅ PASS | All basic strategies functional |
-| RealDataComprehensiveTest | ✅ PASS | Production-ready validation |
-| Priority2AdvancedTest | ✅ PASS | ML and advanced features operational |
-| RealDataMLIntegrationTest | ✅ PASS | ML pipeline working (99.24% accuracy) |
-| ComprehensiveIntegrationTest | ✅ PASS | End-to-end integration successful |
-| Unit Tests | ✅ PASS | 90/90 tests passing |
-
-**Overall Success Rate: 100% (6/6 test categories passed)**
-
----
-
-#### **Key Performance Achievements**
-- **Data Processing**: 10,000+ ticks/second sustained
-- **Latency**: Sub-millisecond processing confirmed
-- **Memory Efficiency**: <100MB baseline usage
-- **ML Accuracy**: 99.24% training accuracy
-- **Strategy Performance**: All strategies detecting opportunities
-- **System Integration**: All components working together
-- **Production Readiness**: Institutional-grade performance
-
----
-
-#### **New Discoveries Not Previously Documented**
-1. **ML Pipeline Operational**: Complete ML training pipeline with 99.24% accuracy
-2. **Advanced Order Types**: TWAP, VWAP, Iceberg orders working
-3. **Hardware Acceleration**: FPGA and GPU acceleration detected and functional
-4. **Multi-Asset Portfolio**: 6-asset portfolio optimization working
-5. **Real-Time Performance**: Sub-millisecond latency confirmed
-6. **High-Frequency Capability**: 10,000+ ticks/second processing verified
-7. **Unit Test Coverage**: 90 unit tests with 100% pass rate
-
----
-
-#### **System Status After Testing**
-🟢 **FULLY OPERATIONAL** - All components tested and verified working  
-🟢 **PRODUCTION READY** - Meets institutional HFT standards  
-🟢 **ML ENABLED** - Complete ML pipeline with 99.24% accuracy  
-🟢 **ADVANCED FEATURES** - All advanced order types and optimizations working  
-🟢 **UNIT TESTED** - 90/90 unit tests passing with 95%+ coverage  
-
----
-
-**Overall Success Rate: 100% (All tests passed - both integration and unit tests)**
-
-The HFT trading system has been thoroughly tested with realistic market data simulation, all strategies are working properly, ML components are operational, unit tests provide comprehensive coverage, and the comprehensive results have been documented in the README without any duplication of existing information.
-
----
-
-**Happy Learning! 🚀**
-
----
-
-## ⚠️ **IMPORTANT SAFETY NOTICE**
-
-### **EDUCATIONAL PURPOSES ONLY**
-- ⚠️ **ALWAYS** use paper trading/demo accounts
-- ⚠️ **REQUIRES** professional risk management for any real trading
-- ⚠️ **CRYPTOCURRENCY TRADING CARRIES SIGNIFICANT RISK OF LOSS**
-
-### **PROPER USAGE**
-✅ Educational learning and understanding HFT concepts  
-✅ Paper trading and strategy testing  
-✅ Academic research and development  
-✅ Learning market microstructure  
-
-### **PROHIBITED USAGE**
-❌ Real money trading without professional oversight  
-❌ Automated trading without proper risk controls  
-❌ Using with funds you cannot afford to lose  
-
-**By using this system, you acknowledge these terms and agree to use it responsibly for educational purposes only.**
